# psuade-lite

./: CMakeLists.txt  COPYRIGHT  LICENSE  README  VERSION  WhatIsNew
.conda-build/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
.github/workflows/: build-conda.yml
Examples/: Makefile
Examples/ARSM/: CMakeLists.txt  README  ValidationData  psuadeARSM1.in  psuadeARSMNN.in  psuadeValidate.in  simulator.c
Examples/Bungee/: CMakeLists.txt  README  grpfile  psScript.all.in  psScript.all.out  psuade.in  psuadeDeriv.in  psuadeForWin.in  selective_regression_file  simulator.c  user_regression.py
Examples/BungeeMP/: README  psfile  psuade.in  simulator.c
Examples/CompositeTest/: README  expdata2  mcmcFile  psuade.in  psuade1.in  psuade2.in  simulator.c  simulator2.c
Examples/ConstraintCheck/: README
Examples/Ishigami/: README  group
Examples/MCMCDisc/: README  expdata  experiment.c  psuade.script1a  psuade.script1b  psuade.script2a  psuade.script2b
Examples/MCMCTest/: CMakeLists.txt  README  psuadeBobyqa.in  psuadeRS.in  psuadeRS2.in  psuadeRSForWin.in  simulator.c  simulator2.c  simulatorBobyqa.c  simulatorNoNoise.c
Examples/MCMCTest2/: README  experiment.c  indexFile  psScript.in  psScript.out  psuadeRS.in  simulator.c
Examples/MOO/: CMakeLists.txt  README  configFile  moo.py  psuade.in  psuadeForWin.in
Examples/MixedTypes/: README  psuade.in  simulator.c
Examples/Morris20/: CMakeLists.txt  README  psLHScript.in  psLHScript.out  psMOATScript.in  psMOATScript.out  psuadeLH.in  psuadeLHForWin.in  psuadeMOAT.in  psuadeMOATForWin.in  simulator.c
Examples/OptCobyla/: README  psuadeCobyla1.in  psuadeCobyla2.in  simulator1.c  simulator2.c
Examples/OptLincoa/: psuadeLincoa.in  psuade_lincoa_constraints  simulator.c
Examples/OptNomad/: README  psScriptNomad3.in  psScriptSCE3.in  psuadeBobyqa4a.in  psuadeCobyla1.in  psuadeCobyla2ouu.in  psuadeNomad1.in  psuadeNomad2.in  psuadeNomad2ouu.in  psuadeNomad2ouu_noconstr.in  psuadeNomad3.in  psuadeNomad4.in  psuadeNomad4a.in  psuadeSCE3.in  psuadeSCE4a.in  simulator1.c  simulator2.c  simulator3.c  simulator4.c  simulator4a.c
Examples/OptRosenbrockM/: CMakeLists.txt  Makefile  README  psScript.out  psuadeBobyqa.in  psuadeBobyqaForWin.in  psuadeCobyla.in  psuadeLBFGS.in  psuadeNomad.in  psuadeRS.in  psuadeSCE.in  psuadeSMMM.in  simulator.c  simulator_deriv.c
Examples/PCA/: README  autoconfigure  psuade.in  simulator.c
Examples/PDFTest/: CMakeLists.txt  README  psScript1.out  psScript2.out  psScript3.out  psScript4.out  psScript5.out  psScript6.out  psScript7.out  psScript8.out  psuade.in  psuade1.in  psuade2.in  psuade3.in  psuade4.in  psuade5.in  psuade6.in  psuade7.in  psuade8.in  sample1  sample2  simulator.c
Examples/SDoE/: psScript.in  psScript2.in  psuade.in
Examples/UserExample/: README  psuadeME.in  psuadeRS.in  psuadeRSIE.in  psuadeRSME.in  psuadeRSTSI.in  psuadeRawUA.in  testmain.py
Examples/UserRegression/: README  psScript.in  psuade.in  simulator.c  user.py
Src/: Makefile
Src/Analysis/: AnalysisManager.cpp  AnalysisManager.h  Analyzer.cpp  Analyzer.h  AnovaAnalyzer.cpp  AnovaAnalyzer.h  BinomialAnalyzer.cpp  BinomialAnalyzer.h  BootstrapAnalyzer.cpp  BootstrapAnalyzer.h  CorrelationAnalyzer.cpp  CorrelationAnalyzer.h  DeltaAnalyzer.cpp  DeltaAnalyzer.h  EtaAnalyzer.cpp  EtaAnalyzer.h  FASTAnalyzer.cpp  FASTAnalyzer.h  FFAnalyzer.cpp  FFAnalyzer.h  FORMAnalyzer.cpp  FORMAnalyzer.h  GowerAnalyzer.cpp  GowerAnalyzer.h  GradStatAnalyzer.cpp  GradStatAnalyzer.h  HMCMCAnalyzer.cpp  HMCMCAnalyzer.h  IntegrationAnalyzer.cpp  IntegrationAnalyzer.h  LSAnalyzer.cpp  LSAnalyzer.h  MCMCAnalyzer.cpp  MCMCAnalyzer.h  MOATAnalyzer.cpp  MOATAnalyzer.h  MainEffectAnalyzer.cpp  MainEffectAnalyzer.h  MomentAnalyzer.cpp  MomentAnalyzer.h  (+32 more)
Src/Base/: Globals.cpp  Globals.h  PsuadeBase.cpp  PsuadeBase.h  PsuadeGenDriver.cpp  PsuadeGradRSM.cpp  PsuadeInclude.h  PsuadeInterpreter.cpp  PsuadeParallelInterpreter.cpp  PsuadeRSInterpreter.cpp  PsuadeSession.cpp  PsuadeSession.h
Src/Comm/: BaseComm.cpp  BaseComm.h  CommMPICH.cpp  CommMPICH.h  CommManager.cpp  CommManager.h  JobCntl.cpp  JobCntl.h
Src/DataIO/: FunctionInterface.cpp  FunctionInterface.cpp.keep  FunctionInterface.cpp.save  FunctionInterface.h  PsuadeConfig.cpp  PsuadeConfig.h  PsuadeData.cpp  PsuadeData.h  pData.cpp  pData.h
Src/FuncApprox/: Acosso.cpp  Acosso.h  Ann.cpp  Ann.h  AnnFunctions.c  AnnFunctions.h  AnnFunctions.ph  BSSAnova.cpp  BSSAnova.h  CSRegression.cpp  CSRegression.h  Earth.cpp  Earth.h  FuncApprox.cpp  FuncApprox.h  FuncApproxFilter.cpp  FuncApproxFilter.h  GP1.cpp  GP1.h  GP2.cpp  GP2.h  GP3.cpp  GP3.h  GradLegendreRegression.cpp  GradLegendreRegression.h  KNN.cpp  KNN.h  Kriging.cpp  Kriging.h  LegendreRegression.cpp  LegendreRegression.h  MGP3.cpp  MGP3.h  MMars.cpp  MMars.h  MRBF.cpp  MRBF.h  Mars.cpp  Mars.h  MarsBagg.cpp  (+35 more)
Src/Main/: Makefile.in  Psuade.cpp  Psuade.h  PsuadeCmakeConfig.h.in
Src/Optimizers/: APPSPACKOptimizer.cpp  APPSPACKOptimizer.h  BobyqaOptimizer.cpp  BobyqaOptimizer.h  CobylaOptimizer.cpp  CobylaOptimizer.h  LBFGSOptimizer.cpp  LBFGSOptimizer.h  LincoaOptimizer.cpp  LincoaOptimizer.h  MMOptimizer.cpp  MMOptimizer.h  MinpackOptimizer.cpp  MinpackOptimizer.h  MultiObjectiveOptimizer.cpp  MultiObjectiveOptimizer.h  NewuoaOptimizer.cpp  NewuoaOptimizer.h  NomadOptimizer.cpp  NomadOptimizer.h  OUU1Optimizer.cpp  OUU1Optimizer.h  OUU2Optimizer.cpp  OUU2Optimizer.h  OUU3Optimizer.cpp  OUU3Optimizer.h  OUUMinlpOptimizer.cpp  OUUMinlpOptimizer.h  OUUOptimizer.cpp  OUUOptimizer.h  Optimizer.cpp  Optimizer.h  SCEOptimizer.cpp  SCEOptimizer.h  SCEPOptimizer.cpp  SCEPOptimizer.h  SMOptimizer.cpp  SMOptimizer.h  TxMathOptimizer.cpp  TxMathOptimizer.h  (+5 more)
Src/PDFLib/: KSDensity.cpp  KSDensity.h  PDFBase.cpp  PDFBase.h  PDFBeta.cpp  PDFBeta.h  PDFCauchy.cpp  PDFCauchy.h  PDFExponential.cpp  PDFExponential.h  PDFF.cpp  PDFF.h  PDFGamma.cpp  PDFGamma.h  PDFHistogram.cpp  PDFHistogram.h  PDFInvGamma.cpp  PDFInvGamma.h  PDFLogNormal.cpp  (+21 more)
scripts/: CMakeLists.txt  psuade_0test.sh  psuade_1test.sh  psuade_2test.sh
(+109 files in other folders)
